<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">UserAppIntents</string>
    <string name="action_settings">Settings</string>
    <string name="txt_Info">Introduce el número de teléfono o una página web:</string>
    <string name="txt_OpenNav">Abrir navegador</string>
    <string name="txt_call">Marcar</string>
    <string name="txt_showContacts">Ver contactos</string>
    <string name="txt_etHint">Introduce el número o la URL</string>
    <string name="txt_alert">Insert some text please!!</string>

</resources>