<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ActivityPrincipal" >

    <Button
        android:id="@+id/btnOpenNav"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:onClick="invokeIntent"
        android:text="@string/txt_OpenNav" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnShowContacts"
        android:layout_below="@+id/btnOpenNav"
        android:layout_marginTop="94dp"
        android:text="@string/txt_Info" />

    <Button
        android:id="@+id/btnCall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignRight="@+id/btnOpenNav"
        android:layout_below="@+id/btnOpenNav"
        android:onClick="invokeIntent"
        android:text="@string/txt_call" />

    <Button
        android:id="@+id/btnShowContacts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignRight="@+id/btnCall"
        android:layout_below="@+id/btnCall"
        android:onClick="invokeIntent"
        android:text="@string/txt_showContacts" />

    <EditText
        android:id="@+id/et_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:hint="@string/txt_etHint"
        android:ems="10" >

        <requestFocus />
    </EditText>

</RelativeLayout>